# lightoladb

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/benchmarks/: insertion_benchmark.cpp  integration_example.cpp  performance_comparison.cpp  query_benchmark.cpp
include/lightoladb/common/: data_types.h  types.h
include/lightoladb/core/: block.h  column.h  database.h
include/lightoladb/sql/: executor.h  parser.h
include/lightoladb/storage/: memory_engine.h  table.h
src/: CMakeLists.txt  main.cpp
src/common/: data_types.cpp  field.cpp
src/core/: database.cpp
src/sql/: executor.cpp  parser.cpp
src/storage/: storage_factory.cpp
tests/: CMakeLists.txt
